--- a/style.css
+++ b/style.css
@@ -1,15 +1,56 @@
 body {
   font-family: Arial, sans-serif;
+  font-size: 15px;
   margin: 0;
   padding: 0;
-  text-align: center;
+  color: #ddd;
+  background-color: #222;
+}
+
+.container {
+  height: 100vh;
+  display: flex;
+  flex-direction: column;
+}
+
+.top-bar {
+  padding: 1em;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  gap: 1em;
+}
+
+h1 {
+  margin: 0;
+  width: auto;
+  flex: 1;
+}
+
+button {
+  padding: 0.3em 0.8em 0.35em 0.8em;
+  font-size: 15px;
+  border: 0px;
+  border-radius: 5px;
+  color: white;
+  background-color: #0d6efd;
 }
 
 #cy {
-  width: 80%;
-  height: 500px;
+  width: 100%;
+  flex: 1;
   margin: 0 auto;
-  border: 1px solid #ccc;
+  border-top: 1px solid #ccc;
+  position: relative;
+}
+
+.algo-controls {
+  display: flex;
+  flex-direction: row;
+  gap: 1em;
+  position: absolute;
+  top: 1em;
+  left: 1em;
 }
 
 #cy canvas {
